@@ -76,7 +76,10 @@
             <a href="Sample_products/list_detail_FMS.html">show single file</a>
         </td>
         <td></td>
-        <td></td>
+        <td>
+            <a href="Sample_products/products_PostgreSQL.html">show 2 files</a><br>
+            <a href="Sample_products/list_detail_PostgreSQL.html">show single file</a>
+        </td>
     </tr>
     <tr>
         <td>Authentication Pages</td>
